2002-03-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): Updated missing list.

2002-02-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/creators_syndicate (sb): Fixed Speed Bump function.
	* Makefile.PL: Added wiley to the list of old modules.

2002-02-24  Elliot Glaysher  <glaysher@umich.edu>

	* lib/ucomics (cd): Removed, since it appears a good deal of archives
	went down, and the comics has been discontinued.
	* MANIFEST, Makefile.PL: removed leftover traces of wiley. Thanks
	goes to Sven.

2002-02-23  Elliot Glaysher  <glaysher@umich.edu>

	* lib/ucomics (wiley): wiley is now in ucomics. Thanks to Shawn Oakey!
	* lib/wiley: Removed.
	
2002-02-21  Elliot Glaysher  <glaysher@umich.edu>

	* debian/rules: Add code outside the Makefiles to put files in the
	right place for a Debian system. One less policy violation.

2002-02-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/littlegamers: Added thanks to Garry Glendown
	
2002-02-17  Elliot Glaysher  <glaysher@umich.edu>

	* debian/rules: Bring netcomics one step closser to being compliant
	with Debian policy. Moved netcomicsrc from /usr.../perl5/Netcomics/etc
	to /etc.
	* debian/netcomics.files: We should install netcomicsrc :)
	* debian/netcomics.conffiles: Changed etc/netcomicsrc to 
	/etc/netcomicsrc

2002-02-11  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspot: Oh dear, I appear to have broken all of keenspot with
	my last commit. Fixed.

2002-02-07  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspace (framed): Updated @missing list.
	(machall): Disabled machall. Machall moved to it's own website and
	needs it's own module now.
	* lib/keenspot (avalon): Updated @missing list.
	(elf): Updated @missing list.
	(rpg): Updated @missing list.

2002-01-23  Elliot Glaysher  <glaysher@umich.edu>

	* lib/megatokyo: Updated.
	
2002-01-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): Updated @missing list