@@ -431,18 +431,19 @@ sub elf {
       20011209,20011215,20011216,20011222,20011223,20011226,20011227,
       20011228,20011229,20011230,20020105,20020106,20020108,20020109,
       20020110,20020111,20020112,20020113,20020115,20020116,20020118,
-      20020119,20020122,20020123,20020124,20020125,20020126,20020127,
-      20020129,20020131,20020202,20020203,20020205);
+	  20020119);
 
     my @extra = ();
 
     #Everyday until Present
     return undef if 
-      (($date < 19990614) || #first comic on June 14, 1999
-      (($date >= 19990614 && $date <= $date2) && 
-      ($ltime[6] !~ /[0123456]/)) ||
-      grep(/$date/,@missing));
-
+		(($date < 19990614) || #first comic on June 14, 1999
+		 (($date >= 19990614 && $date <= 20020120) &&    # Check all days up to
+		  ($ltime[6] !~ /[0123456]/)) ||                 # 2002-01-20
+		 (($date >= 20020121 && $date <= $date2 ) &&     # MWF schedule after
+		  ($ltime[6] !~ /[135]/)) ||                     # 2002-01-28
+		 grep(/$date/,@missing));
+	
     my $title = "Elf Life";
     my $author = "Carson Fire";
     my $url = "http://www.elflife.com";
